<resources>
    <string name="app_name" translatable="false">Chef\'s Kiss</string>
    <string name="recipes">Recipes</string>
    <string name="add_recipe">Add recipe</string>
    <string name="add">Add</string>
    <string name="language">Language</string>
    <string name="filters">Filters</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="order_by" translatable="false">Order by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort_by">Sort by</string>
    <string name="open_close_sorting_methods">Open/close sorting methods</string>
    <string name="tag_filter">Tag filter</string>
    <string name="open_close_tags">Open/close tags</string>
    <string name="rating">Rating</string>
    <string name="favorite">Favorite</string>
    <string name="reset">Reset</string>
    <string name="time_to_cook">Time to cook</string>
    <string name="favorite_Recipe">Favorite Recipe</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="select_meals">Select Meals</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="backToMealPlanner">Back to Meal Planner</string>
    <string name="deselect_meals">Deselect meals</string>
    <string name="moveMeals">Move Meals</string>
    <string name="copyMeals">Copy Meals</string>
    <string name="done">Done</string>
    <string name="move">Move</string>
    <string name="copy">Copy</string>
    <string name="selectAll">Select All</string>
    <string name="deselectAll">Deselect All</string>
    <string name="tapToPasteHere">+ Tap to paste here</string>
    <string name="tapToMoveHere">+ Tap to move here</string>
    <string name="bulkEdit">Bulk Edit</string>
    <string name="revertToCurrentWeek">Revert to current week</string>
    <string name="openNavigationMenu">Open navigation menu</string>
    <string name="open_close_cards">Open/Close cards</string>
    <string name="addDayToShoppingList">Add day to Shopping List</string>
    <string name="edit">Edit</string>
    <string name="selectRecipe">Select Recipe</string>
    <string name="addToPlanner">Add to Planner</string>
    <string name="deleteRecipe">Delete Recipe</string>
    <string name="overview">Overview</string>
    <string name="tags">Tags</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="setTime">Set time</string>
    <string name="selectTime">Select Time</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="selectImage">Select Image</string>
    <string name="pickImageFromGallery">Pick image from gallery</string>
    <string name="title">Title</string>
    <string name="servings">Servings</string>
    <string name="cookingTime">"Cooking Time "</string>
    <string name="addNewTag">Add new tag</string>
    <string name="tag">Tag</string>
    <string name="deleteTags">Delete tags</string>
    <string name="ingredient">Ingredient</string>
    <string name="amount">Amount</string>
    <string name="imperial">Imperial</string>
    <string name="weight">Weight</string>
    <string name="volume">Volume</string>
    <string name="addIngredient">Add Ingredient</string>
    <string name="remove">Remove</string>
    <string name="enterCookingDirections">Enter cooking directions</string>
    <string name="servingSize">Servings</string>
    <string name="adjustServingSize">Adjust servings</string>
    <string name="remove1FromServingSize">Remove 1 from servings</string>
    <string name="add1ToServingSize">Add 1 to servings</string>
    <string name="metric">Metric</string>
    <string name="about">About</string>
    <string name="dismiss">Dismiss</string>
    <string name="quickAddToMealPlanner">Quick add to Meal Planner</string>
    <string name="deleteConfirmation">Are you sure that you want to delete this recipe? (Can\'t be recovered)</string>
    <string name="timer">Timer</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="addToShoppingList">Add to Shopping List</string>
    <string name="addToMealPlanner">Add to Meal Planner</string>
    <string name="printExportasPDF">Print/Export as PDF</string>
    <string name="openRecipeIngredients">Open recipe ingredients</string>
    <string name="shoppingList">Shopping List</string>
    <string name="openNavigationDrawer">Open navigation drawer</string>
    <string name="timerTitle">Timer title</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="start">Start</string>
    <string name="setTimer">Set timer</string>
    <string name="home">Home</string>
    <string name="mealPlanner">Meal Planner</string>
    <string name="grams_g">Grams (g)</string>
    <string name="kilograms_kg">Kilograms (kg)</string>
    <string name="mililiters_ml">Mililiters (ml)</string>
    <string name="liters_l">Liters (l)</string>
    <string name="teaspoons_t">Teaspoons (t)</string>
    <string name="tablespoons_t">Tablespoons (T)</string>
    <string name="cups_c">Cups (c)</string>
    <string name="ounces_oz">Ounces (oz)</string>
    <string name="fluid_ounces_floz">Fluid ounces (floz)</string>
    <string name="pounds_lb">Pounds (lb)</string>
    <string name="gallons_gal">Gallons (gal)</string>
    <string name="to_taste">To taste</string>
    <string name="pinches">Pinches</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="added_to_shopping_list">Added to shopping list</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="serving_size_can_t_be_lower_than_1">Servings can\'t be lower than 1</string>
    <string name="added_to_as">Added to %1$s as %2$s</string>
    <string name="removed">Removed %1$s</string>
    <string name="_1_minute">1 minute</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_1_hour">1 hour</string>
    <string name="_2_hours">2 hours</string>
    <string name="cooking_time">Cooking time</string>
    <string name="time_added">Time added</string>
    <string name="portion">Portion</string>
    <string name="delete_meals">Delete meals</string>
    <string name="bulk_edit_delete_confirmation">Are you sure that you want to delete %1$s recipes? (Can\'t be recovered)</string>
    <string name="title_should_not_be_empty">Title should not be empty!</string>
    <string name="cooking_time_should_not_be_empty">Cooking time should not be empty!</string>
    <string name="cooking_time_should_be_a_whole_number_ex_1_not">Cooking time should be a whole number (ex. 1) not (%1$s)!</string>
    <string name="serving_size_should_not_be_empty">Servings should not be empty!</string>
    <string name="serving_size_should_be_a_whole_number_ex_1_not">Servings should be a whole number (ex. 1) not (%1$s!)</string>
    <string name="ingredients_amount_should_be_a_number_ex_1_1_not">Ingredients (%1$s) amount should be a number (ex. 1.1) not (%2$s)!</string>
</resources>