...
                onSearch()
                focusManager.clearFocus()
            }),
            singleLine = true,
            leadingIcon = {
                IconButton(onClick = onCustomButtonClick) {
                    Icon(imageVector = customButtonIcon, contentDescription = "Search button")
                }
            },
            trailingIcon = {
                if (query != "") {
                    IconButton(onClick = {
                        onQueryChange("")
...
